common/gql/parser/guardquery_parser.go
// Code generated from GuardQuery.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // GuardQuery
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GuardQueryParser struct {
	*antlr.BaseParser
}

var GuardQueryParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func guardqueryParserInit() {
	staticData := &GuardQueryParserStaticData
	staticData.LiteralNames = []string{
		"", "'m'", "'h'", "'d'", "'avg'", "'$msg'", "'json'", "'yaml'", "';'",
		"'.'", "'('", "')'", "'['", "']'", "','", "'='", "'*'", "'+'", "'-'",
		"'/'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'<>'", "'NODE'",
		"'PROVIDER'", "'AND'", "'OR'", "'NOT'", "'IN'", "'TO'", "'SELECT'",
		"'FROM'", "'AS'", "'WHERE'", "'LIMIT'", "'OFFSET'", "'ORDER'", "'BY'",
		"'WITH'", "'WINDOW'", "'ASC'", "'DESC'", "'TRUE'", "'FALSE'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR",
		"OPEN_BRA", "CLOSE_BRA", "COMMA", "ASSIGN", "STAR", "PLUS", "MINUS",
		"DIV", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", "NODE_",
		"PROVIDER_", "AND_", "OR_", "NOT_", "IN_", "TO_", "SELECT_", "FROM_",
		"AS_", "WHERE_", "LIMIT_", "OFFSET_", "ORDER_", "BY_", "WITH_", "WINDOW_",
		"ASC_", "DESC_", "TRUE_", "FALSE_", "IDENTIFIER", "NUMERIC_LITERAL",
		"STRING_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES",
		"UNEXPECTED_CHAR",
	}
	staticData.RuleNames = []string{
		"parse", "select", "windowSizeStmt", "timeStmt", "absTimeStmt", "relatTimeStmt",
		"timeUnit", "whereStmt", "sourceOrSubquery", "source", "node", "provider",
		"providerArg", "resultColumn", "windowFunction", "resultAlias", "anyName",
		"boolExpr", "valueExpr", "buildinSource", "buildinFunction", "literalValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GuardQueryParserInit initializes any static state used to implement GuardQueryParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGuardQueryParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GuardQueryParserInit() {
	staticData := &GuardQueryParserStaticData
	staticData.once.Do(guardqueryParserInit)
}

// NewGuardQueryParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGuardQueryParser(input antlr.TokenStream) *GuardQueryParser {
	GuardQueryParserInit()
	this := new(GuardQueryParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GuardQueryParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "GuardQuery.g4"

	return this
}

// GuardQueryParser tokens.
const (
	GuardQueryParserEOF                 = antlr.TokenEOF
	GuardQueryParserT__0                = 1
	GuardQueryParserT__1                = 2
	GuardQueryParserT__2                = 3
	GuardQueryParserT__3                = 4
	GuardQueryParserT__4                = 5
	GuardQueryParserT__5                = 6
	GuardQueryParserT__6                = 7
	GuardQueryParserSCOL                = 8
	GuardQueryParserDOT                 = 9
	GuardQueryParserOPEN_PAR            = 10
	GuardQueryParserCLOSE_PAR           = 11
	GuardQueryParserOPEN_BRA            = 12
	GuardQueryParserCLOSE_BRA           = 13
	GuardQueryParserCOMMA               = 14
	GuardQueryParserASSIGN              = 15
	GuardQueryParserSTAR                = 16
	GuardQueryParserPLUS                = 17
	GuardQueryParserMINUS               = 18
	GuardQueryParserDIV                 = 19
	GuardQueryParserLT                  = 20
	GuardQueryParserLT_EQ               = 21
	GuardQueryParserGT                  = 22
	GuardQueryParserGT_EQ               = 23
	GuardQueryParserEQ                  = 24
	GuardQueryParserNOT_EQ1             = 25
	GuardQueryParserNOT_EQ2             = 26
	GuardQueryParserNODE_               = 27
	GuardQueryParserPROVIDER_           = 28
	GuardQueryParserAND_                = 29
	GuardQueryParserOR_                 = 30
	GuardQueryParserNOT_                = 31
	GuardQueryParserIN_                 = 32
	GuardQueryParserTO_                 = 33
	GuardQueryParserSELECT_             = 34
	GuardQueryParserFROM_               = 35
	GuardQueryParserAS_                 = 36
	GuardQueryParserWHERE_              = 37
	GuardQueryParserLIMIT_              = 38
	GuardQueryParserOFFSET_             = 39
	GuardQueryParserORDER_              = 40
	GuardQueryParserBY_                 = 41
	GuardQueryParserWITH_               = 42
	GuardQueryParserWINDOW_             = 43
	GuardQueryParserASC_                = 44
	GuardQueryParserDESC_               = 45
	GuardQueryParserTRUE_               = 46
	GuardQueryParserFALSE_              = 47
	GuardQueryParserIDENTIFIER          = 48
	GuardQueryParserNUMERIC_LITERAL     = 49
	GuardQueryParserSTRING_LITERAL      = 50
	GuardQueryParserSINGLE_LINE_COMMENT = 51
	GuardQueryParserMULTILINE_COMMENT   = 52
	GuardQueryParserSPACES              = 53
	GuardQueryParserUNEXPECTED_CHAR     = 54
)

// GuardQueryParser rules.
const (
	GuardQueryParserRULE_parse            = 0
	GuardQueryParserRULE_select           = 1
	GuardQueryParserRULE_windowSizeStmt   = 2
	GuardQueryParserRULE_timeStmt         = 3
	GuardQueryParserRULE_absTimeStmt      = 4
	GuardQueryParserRULE_relatTimeStmt    = 5
	GuardQueryParserRULE_timeUnit         = 6
	GuardQueryParserRULE_whereStmt        = 7
	GuardQueryParserRULE_sourceOrSubquery = 8
	GuardQueryParserRULE_source           = 9
	GuardQueryParserRULE_node             = 10
	GuardQueryParserRULE_provider         = 11
	GuardQueryParserRULE_providerArg      = 12
	GuardQueryParserRULE_resultColumn     = 13
	GuardQueryParserRULE_windowFunction   = 14
	GuardQueryParserRULE_resultAlias      = 15
	GuardQueryParserRULE_anyName          = 16
	GuardQueryParserRULE_boolExpr         = 17
	GuardQueryParserRULE_valueExpr        = 18
	GuardQueryParserRULE_buildinSource    = 19
	GuardQueryParserRULE_buildinFunction  = 20
	GuardQueryParserRULE_literalValue     = 21
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SCOL() antlr.TerminalNode
	Select_() ISelectContext

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) SCOL() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserSCOL, 0)
}

func (s *ParseContext) Select_() ISelectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *GuardQueryParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GuardQueryParserRULE_parse)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Select_()
	}

	{
		p.SetState(45)
		p.Match(GuardQueryParserSCOL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISelectContext is an interface to support dynamic dispatch.
type ISelectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SELECT_() antlr.TerminalNode
	AllResultColumn() []IResultColumnContext
	ResultColumn(i int) IResultColumnContext
	FROM_() antlr.TerminalNode
	AllSourceOrSubquery() []ISourceOrSubqueryContext
	SourceOrSubquery(i int) ISourceOrSubqueryContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode
	WINDOW_() antlr.TerminalNode
	WindowSizeStmt() IWindowSizeStmtContext
	IN_() antlr.TerminalNode
	TimeStmt() ITimeStmtContext
	WHERE_() antlr.TerminalNode
	WhereStmt() IWhereStmtContext

	// IsSelectContext differentiates from other interfaces.
	IsSelectContext()
}

type SelectContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectContext() *SelectContext {
	var p = new(SelectContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_select
	return p
}

func InitEmptySelectContext(p *SelectContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_select
}

func (*SelectContext) IsSelectContext() {}

func NewSelectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectContext {
	var p = new(SelectContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_select

	return p
}

func (s *SelectContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectContext) SELECT_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserSELECT_, 0)
}

func (s *SelectContext) AllResultColumn() []IResultColumnContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IResultColumnContext); ok {
			len++
		}
	}

	tst := make([]IResultColumnContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IResultColumnContext); ok {
			tst[i] = t.(IResultColumnContext)
			i++
		}
	}

	return tst
}

func (s *SelectContext) ResultColumn(i int) IResultColumnContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResultColumnContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResultColumnContext)
}

func (s *SelectContext) FROM_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserFROM_, 0)
}

func (s *SelectContext) AllSourceOrSubquery() []ISourceOrSubqueryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISourceOrSubqueryContext); ok {
			len++
		}
	}

	tst := make([]ISourceOrSubqueryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISourceOrSubqueryContext); ok {
			tst[i] = t.(ISourceOrSubqueryContext)
			i++
		}
	}

	return tst
}

func (s *SelectContext) SourceOrSubquery(i int) ISourceOrSubqueryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceOrSubqueryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceOrSubqueryContext)
}

func (s *SelectContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(GuardQueryParserCOMMA)
}

func (s *SelectContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(GuardQueryParserCOMMA, i)
}

func (s *SelectContext) WINDOW_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserWINDOW_, 0)
}

func (s *SelectContext) WindowSizeStmt() IWindowSizeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWindowSizeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWindowSizeStmtContext)
}

func (s *SelectContext) IN_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserIN_, 0)
}

func (s *SelectContext) TimeStmt() ITimeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITimeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITimeStmtContext)
}

func (s *SelectContext) WHERE_() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserWHERE_, 0)
}

func (s *SelectContext) WhereStmt() IWhereStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhereStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhereStmtContext)
}

func (s *SelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterSelect(s)
	}
}

func (s *SelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitSelect(s)
	}
}

func (p *GuardQueryParser) Select_() (localctx ISelectContext) {
	localctx = NewSelectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GuardQueryParserRULE_select)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(GuardQueryParserSELECT_)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(48)
		p.ResultColumn()
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GuardQueryParserCOMMA {
		{
			p.SetState(49)
			p.Match(GuardQueryParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(50)
			p.ResultColumn()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GuardQueryParserWINDOW_ {
		{
			p.SetState(56)
			p.Match(GuardQueryParserWINDOW_)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(57)
			p.WindowSizeStmt()
		}

	}
	{
		p.SetState(60)
		p.Match(GuardQueryParserFROM_)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(61)
		p.SourceOrSubquery()
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GuardQueryParserCOMMA {
		{
			p.SetState(62)
			p.Match(GuardQueryParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(63)
			p.SourceOrSubquery()
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GuardQueryParserIN_ {
		{
			p.SetState(69)
			p.Match(GuardQueryParserIN_)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(70)
			p.TimeStmt()
		}

	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == GuardQueryParserWHERE_ {
		{
			p.SetState(73)
			p.Match(GuardQueryParserWHERE_)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(74)
			p.WhereStmt()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IWindowSizeStmtContext is an interface to support dynamic dispatch.
type IWindowSizeStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NUMERIC_LITERAL() antlr.TerminalNode
	TimeUnit() ITimeUnitContext

	// IsWindowSizeStmtContext differentiates from other interfaces.
	IsWindowSizeStmtContext()
}

type WindowSizeStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWindowSizeStmtContext() *WindowSizeStmtContext {
	var p = new(WindowSizeStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_windowSizeStmt
	return p
}

func InitEmptyWindowSizeStmtContext(p *WindowSizeStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_windowSizeStmt
}

func (*WindowSizeStmtContext) IsWindowSizeStmtContext() {}

func NewWindowSizeStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WindowSizeStmtContext {
	var p = new(WindowSizeStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_windowSizeStmt

	return p
}

func (s *WindowSizeStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *WindowSizeStmtContext) NUMERIC_LITERAL() antlr.TerminalNode {
	return s.GetToken(GuardQueryParserNUMERIC_LITERAL, 0)
}

func (s *WindowSizeStmtContext) TimeUnit() ITimeUnitContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITimeUnitContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITimeUnitContext)
}

func (s *WindowSizeStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WindowSizeStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WindowSizeStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.EnterWindowSizeStmt(s)
	}
}

func (s *WindowSizeStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GuardQueryListener); ok {
		listenerT.ExitWindowSizeStmt(s)
	}
}

func (p *GuardQueryParser) WindowSizeStmt() (localctx IWindowSizeStmtContext) {
	localctx = NewWindowSizeStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GuardQueryParserRULE_windowSizeStmt)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.Match(GuardQueryParserNUMERIC_LITERAL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(78)
		p.TimeUnit()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITimeStmtContext is an interface to support dynamic dispatch.
type ITimeStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AbsTimeStmt() IAbsTimeStmtContext
	RelatTimeStmt() IRelatTimeStmtContext

	// IsTimeStmtContext differentiates from other interfaces.
	IsTimeStmtContext()
}

type TimeStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTimeStmtContext() *TimeStmtContext {
	var p = new(TimeStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_timeStmt
	return p
}

func InitEmptyTimeStmtContext(p *TimeStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GuardQueryParserRULE_timeStmt
}

func (*TimeStmtContext) IsTimeStmtContext() {}

func NewTimeStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TimeStmtContext {
	var p = new(TimeStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GuardQueryParserRULE_timeStmt

	return p
}

func (s *TimeStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *TimeStmtContext) AbsTimeStmt() IAbsTimeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAbsTimeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAbsTimeStmtContext)
}
